updated example properties

--- a/src/main/resources/example.properties
+++ b/src/main/resources/example.properties
@@ -6,3 +6,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #COPY AND PASTE THE ABOVE INTO APPLICATION.PROPERTIES (WHICH SHOULD BE GITIGNORED) AND MODIFIY THE DATABASE NAME, USER NAME AND PASSWORD.
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=username comes from mailtrap smtp 
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=admin@example.com 
